// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolFormFieldLabelFc should render the correct component tag "label"  1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text">
    <span>
      Test Label
    </span>
  </span>
</label>
`;

exports[`KolFormFieldLabelFc should render the correct component tag "legend"  1`] = `
<legend class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text">
    <span>
      Test Label
    </span>
  </span>
</legend>
`;

exports[`KolFormFieldLabelFc should render with accessKey and shortKey 1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text">
    Test Label
    <span aria-hidden="true" class="access-key-hint">
      A
    </span>
  </span>
</label>
`;

exports[`KolFormFieldLabelFc should render with expert slot 1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text"></span>
</label>
`;

exports[`KolFormFieldLabelFc should render with label 1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text">
    <span>
      Test Label
    </span>
  </span>
</label>
`;
